fix(frontend/SinglePopularCourse): course banner is not overflow anymore
Limit height of banner and also add text ellipsis when description is longer than 2 sentences

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -20,6 +20,14 @@ body {
   border-left: 1.5px solid #e0e0e0;
 }
 
+.ellipsis-2line {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 @media (max-width: 1024px) {
   .hide-md {
     display: none;
